# ichise-shell

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  README.md  meson.build  meson_options.txt  shell.nix  wayfire.ini
plugins/: meson.build  signals.hpp
plugins/hello/: meson.build  plugin.cpp  plugin.xml
plugins/trigger/: meson.build  plugin.cpp  plugin.xml  trigger.cpp  trigger.ebnf  trigger.hpp
proto/: hello.proto  meson.build
